FIX: content doesn't shift on modals

--- a/src/components/CollectionPage/styles.module.scss
+++ b/src/components/CollectionPage/styles.module.scss
@@ -6,8 +6,4 @@
   button {
     border: 1px solid #444;
   }
-
-  .MuiButton-contained {
-    color: blue;
-  }
 }
